--- a/ch9/package.json
+++ b/ch9/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -18,6 +19,9 @@
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "nunjucks": "^3.2.2",
+    "passport": "^0.4.1",
+    "passport-kakao": "^1.0.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.3.4",
     "sequelize-cli": "^6.2.0"
   },
